<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bomberman</string>
    <string name="action_settings">Settings</string>
    
    <string name="newgame_button">New Game</string>
    <string name="joingame_button">Join Game</string>
    <string name="singleplayer_button">Single-player</string>
    <string name="multiplayer_button">Multi-player</string>
    <string name="startgame_button">Start Game</string>
    <string name="ready_button">Ready</string>  
    <string name="settings_button">Settings</string>
    <string name="selected_user">Selected Username:</string>
    <string name="none">(None - Please go to Settings)</string>
    <string name="leave_button">Leave</string>
    <string name="adduser_button">Add Username</string>
    <string name="white_space"> </string>
    
    <string name="adduser_hint">New Username</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_select_map">Select Level</string>
    <string name="title_activity_game">Bomberman</string>
    <string name="title_activity_scores">Scores</string>
    <string name="title_activity_multiplayer_menu">Multi-player</string>
    
    <string name="activity_select_map_level_name">Level name: </string>
    <string name="activity_select_map_game_duration">Game duration: </string>
    <string name="activity_select_map_explosion_timeout">Explosion timeout: </string>
    <string name="activity_select_map_explosion_duration">Explosion duration: </string>
    <string name="activity_select_map_explosion_range">Explosion range: </string>
    <string name="activity_select_map_robot_speed">Robots speed: </string>
    <string name="activity_select_map_points_per_robot">Pts. per robot: </string>
    <string name="activity_select_map_points_per_opponent">Pts. per opponent: </string>

    <string-array name="levels_array">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
    </string-array>

</resources>