<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCC33"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MultiplayerMenuActivity" >

	<ListView
        android:id="@+id/btList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.40" 
        android:visibility="gone" >
    </ListView>
    
   	<Spinner
        android:id="@+id/levels_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone" />
   	
   	<TextView
        android:id="@+id/level_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_select_map_level_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_weight="1"
        android:visibility="gone" />
   	
    <!--  <Button
        android:id="@+id/newgame_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:onClick="newGame"
        android:text="@string/newgame_button" /> -->
  
    <Button
        android:id="@+id/newgame_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:onClick="newGame"
        android:text="@string/newgame_button"/>
    
    <Button
        android:id="@+id/joingame_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:onClick="joinGame"
        android:text="@string/joingame_button" />
    
    <Button
        android:id="@+id/ready_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:onClick="sendReady"
        android:text="@string/ready_button" 
        android:visibility="gone" />
    
    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:onClick="startGame"
        android:text="@string/startgame_button"
        android:visibility="gone"/>

</LinearLayout>